# Image_processing

./: CMakeLists.txt  cw_01.cpp  lab_03.cpp  lab_3.cpp  main.cpp
Lab_1/: main.cpp
Lab_2/: main.cpp
Lab_2/Task_1/: CMakeLists  main.cpp
Lab_2/Task_2/: main.cpp
Lab_3/: lab_3.cpp
course_work/: CMakeLists.txt  README.md  course_work.cpp  Новицкий_БПМ-16-2_Отчёт.docx  Новицкий_БПМ-16-2_Отчёт_v.2.0.docx  Новицкий_БПМ-16-2_Отчёт_v.2.1.docx  Новицкий_БПМ-16-2_Отчёт_v.2.3.docx  Новицкий_БПМ-16-2_Отчёт_v.2.4.docx  Приложение 1. Расчёты v.2.0.xlsx  Приложение 1. Расчёты.xlsx
course_work/images/: SSIM_differents.emf  SSIM_image.emf  file
course_work/tid2013/reference_images/: file
cw_01/: CMakeLists.txt  cw_01.cpp
lab_00/: CMakeLists.txt  lab_00.cpp
lab_01/: CMakeLists.txt  Novitskiy_DA_lab01.md  lab_01.cpp
lab_01/part_1/: CMakeLists.txt  lab_01_part_1.cpp
lab_01/part_2/: CMakeLists.txt  lab_01_part_2.cpp
lab_02/: CMakeLists.txt  Novitskiy_DA_lab02.md  README.md  lab_02.cpp
lab_03/: CMakeLists.txt  lab_03.cpp
